--- a/public/viewNotes.html
+++ b/public/viewNotes.html
@@ -29,7 +29,8 @@
       <div class="section">
         <div class="columns">
           <div class="column has-text-centered">
-            <h1 class="title">Some of Your Greatest Ideas Started Here</h1><br>
+            <h1 class="title">Some of Your Greatest Ideas Started Here</h1>
+            <p class="has-text-right">Sort by <a>Title </a>|<a> Time </a>|<a> Label </a></p><br>
           </div>
         </div>
         <div id="app" class="columns is-multiline">
