--- a/public/viewNotes.html
+++ b/public/viewNotes.html
@@ -30,7 +30,7 @@
         <div class="columns">
           <div class="column has-text-centered">
             <h1 class="title">Some of Your Greatest Ideas Started Here</h1>
-            <p class="has-text-right">Sort by <a>Title </a>|<a> Time </a>|<a> Label </a></p><br>
+            <p class="has-text-right">Sort by <a href="javascript:sortCardsByTitle()">Title </a>|<a href="javascript:sortCardsByTime()"> Time </a>|<a> Label </a></p><br>
           </div>
         </div>
         <div id="app" class="columns is-multiline">
