implemented sorting by both smallest and largest

--- a/public/viewNotes.html
+++ b/public/viewNotes.html
@@ -42,8 +42,7 @@
       <div class="container">
         <div class="content has-text-centered">
           <p>
-            <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>.
-            The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. <br>
+            <i>Access the <a href="http://jgthms.com">Archives</a></i>
           </p>
         </div>
       </div>
@@ -52,7 +51,13 @@
         <div class="modal-background"></div>
         <div class="modal-card">
             <section class="modal-card-body">
+                <b><p>Title</p></b>
                 <input class="input is-normal" id="editTitleInput" type="text">
+                <br>
+                <b><p>Labels</p></b>
+                <input class="input is-normal" id="editLabelInput" type="text">
+                <br>
+                <b><p>Note</p></b>
                 <input class="input is-normal" id="editTextInput" type="text">
                 <input id="noteId" type="hidden">
             </section>
@@ -64,7 +69,6 @@
             </footer>
         </div>
     </div>
-    
     </body>
 
 </html>
