--- a/public/viewNotes.html
+++ b/public/viewNotes.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="https://favicon.io/emoji-favicons/memo" />
     <title>Fire Notes</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,7 +31,8 @@
         <div class="columns">
           <div class="column has-text-centered">
             <h1 class="title">Some of Your Greatest Ideas Started Here</h1>
-            <p class="has-text-right">Sort by <a href="javascript:sortCardsByTitle()">Title </a>|<a href="javascript:sortCardsByTime()"> Time </a>|<a> Label </a></p><br>
+            <p class="has-text-right">Sort by <a href="javascript:sortCardsByTitle()">Title </a>|<a href="javascript:sortCardsByTime()"> Time </a>|<a href="javascript:sortCardsByLabel()"> Label </a></p><br>
+            <div id="labelSort"></div>
           </div>
         </div>
         <div id="app" class="columns is-multiline">
@@ -58,7 +60,8 @@
                 <input class="input is-normal" id="editLabelInput" type="text">
                 <br>
                 <b><p>Note</p></b>
-                <input class="input is-normal" id="editTextInput" type="text">
+                <!-- <input class="input is-normal" id="editTextInput" type="text"> -->
+                <textarea class="textarea is-medium" id="editTextInput" type="text"></textarea>
                 <input id="noteId" type="hidden">
             </section>
             <footer class="modal-card-foot">
